--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://toznyigit.github.io/portfolio",
+  "homepage": "https://toznyigit.github.io/portfolio/",
   "name": "portfolio-2023",
   "version": "0.1.0",
   "private": true,
